--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <title>{% block title %}Mass34 | Gestión Kanban{% endblock %}</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" 
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" 
+        crossorigin="anonymous"></script>
     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
